feat: Complete Supabase integration with chat and user system
- Add Row Level Security policies for Users, Channels, Messages, Transactions
- Create channel seeding script with 6 default channels
- Add automatic message cleanup script (30-day retention)
- Configure .env with complete Supabase credentials
- Add cleanup:messages and db:seed:channels npm scripts

Features:
- Users with wallet auth, usernames, ETH/USD balances
- Public and private chat channels
- Messages with 30-day auto-cleanup
- Transaction tracking for deposits/withdrawals/tips
- Secure RLS policies for all tables

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:seed": "ts-node --compiler-options {\\\"module\\\":\\\"CommonJS\\\"} prisma/seeds/forum.ts",
+    "db:seed:channels": "ts-node --compiler-options {\\\"module\\\":\\\"CommonJS\\\"} prisma/seeds/channels.ts",
+    "cleanup:messages": "ts-node --compiler-options {\\\"module\\\":\\\"CommonJS\\\"} scripts/cleanup-old-messages.ts",
     "postinstall": "prisma generate"
   },
   "prisma": {
