--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@supabase/supabase-js": "^2.75.0",
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "formidable": "^3.5.4",
@@ -57,6 +59,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
+    "@types/formidable": "^3.4.6",
     "ts-node": "^10.9.2"
   }
 }
