--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,11 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "arcade",
+    "public/arcade",
+    "chain"
+  ]
 }
 
