feat: Add mobile wallet support and fix text references
- Add mobile wallet buttons to mobile menu
- Update mobile wallet UI state in updateWalletUI()
- Add mobile disconnect functionality
- Remove 'Cyberpunk' from all titles and descriptions
- Add mobile wallet CSS styling
- Fix chat placeholder based on wallet connection state

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "the-basement",
   "version": "1.0.0",
-  "description": "Retro Cyberpunk Web3 Arcade on Base Network",
+  "description": "Retro Web3 Arcade on Base Network",
   "main": "index.html",
   "scripts": {
     "dev": "next dev -p 8000",
