--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
     "@types/formidable": "^3.4.6",
+    "eslint": "9.37.0",
+    "eslint-config-next": "15.5.4",
     "ts-node": "^10.9.2"
   }
 }
