--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "buildCommand": "npm run build",
   "framework": "nextjs",
+  "outputDirectory": ".next",
   "regions": ["iad1"],
   "headers": [
     {
