Add Solana network support - Phase 1 Foundation
ðŸŒŸ Multi-Chain Integration (Base + Solana)

COMPLETED:
âœ… Installed Solana dependencies (@solana/web3.js, wallet-adapter)
âœ… Created multi-chain wallet adapter (lib/wallet/multi-chain.ts)
  - Unified interface for both Ethereum and Solana
  - Supports Phantom on both chains
  - MetaMask and Base Wallet for Ethereum/Base
âœ… Created ChainSelector component (components/ChainSelector.tsx)
  - Toggle between Base and Solana networks
  - Responsive design
âœ… Created Solana utilities (lib/solana/connection.ts)
  - Connection management
  - Balance checking
  - Transaction confirmation
  - Address validation
âœ… Created CoinToss Solana program template
  - Anchor framework
  - 5% house fee
  - PvP coin flip mechanics
  - Ready for deployment
âœ… Documentation:
  - SOLANA_INTEGRATION_PLAN.md (strategy)
  - SOLANA_QUICK_START.md (implementation guide)
  - solana/README.md (development setup)

ARCHITECTURE:
- Parallel support (both networks work simultaneously)
- Phantom wallet supports both chains
- Same game mechanics on both networks
- Solana advantages: 400ms tx, .0001 fees vs Base 2s tx, .01 fees

NEXT STEPS (Manual):
1. Install Solana CLI
2. Install Anchor framework
3. Build Solana programs
4. Deploy to devnet for testing
5. Update frontend with chain selector
6. Deploy to mainnet

STATUS: Phase 1 Complete - Ready for Solana CLI installation

--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-phantom": "^0.9.28",
+    "@solana/wallet-adapter-wallets": "^0.19.37",
+    "@solana/web3.js": "^1.98.4",
     "@supabase/supabase-js": "^2.75.0",
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
