--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
+    "ethers": "^6.15.0",
     "formidable": "^3.5.4",
     "keccak256": "^1.0.6",
     "next": "^15.5.4",
