--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "url": "https://github.com/0xcryptj/basement.git"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^1.1.1",
     "@prisma/client": "^6.17.1",
     "@solana/wallet-adapter-base": "^0.9.27",
     "@solana/wallet-adapter-phantom": "^0.9.28",
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.4",
     "@supabase/supabase-js": "^2.75.0",
+    "@tanstack/react-query": "^5.90.3",
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
     "@vercel/analytics": "^1.5.0",
